[package]
name = "inline-sql-macros"
description = "procedural macros for inline-sql"
version = "0.1.3"
license = "BSD-2-Clause"
repository = "https://github.com/de-vri-es/inline-sql-rs"

edition = "2021"
publish = ["crates-io"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0.52", features = ["full"] }
