[package]
name = "inline-sql"
version = "0.0.0"

edition = "2021"

[dependencies]
futures = { version = "0.3.30", default-features = false, features = ["std"] }
inline-sql-macros = { path = "../inline-sql-macros", version = "=0.0.0" }
tokio-postgres = "0.7.10"

[dev-dependencies]
clap = { version = "4.5.1", features = ["derive", "error-context"] }
pg_mapper = "0.2.1"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
tokio-postgres = "0.7.10"
