[package]
name = "inline-sql"
description = "write SQL queries directly in Rust functions"
version = "0.1.4"
license = "BSD-2-Clause"
repository = "https://github.com/de-vri-es/inline-sql-rs"
documentation = "https://docs.rs/inline-sql"
keywords = ["sql", "inline", "database", "postgres"]
categories = ["database"]

edition = "2021"
publish = ["crates-io"]

[dependencies]
futures = { version = "0.3.30", default-features = false, features = ["std"] }
inline-sql-macros = { path = "../inline-sql-macros", version = "0.1.4" }
tokio-postgres = "0.7.10"

[dev-dependencies]
clap = { version = "4.5.1", features = ["derive", "error-context"] }
pg_mapper = "0.2.1"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
tokio-postgres = "0.7.10"
